--- a/day eight/sass/app.sass
+++ b/day eight/sass/app.sass
@@ -103,7 +103,7 @@ h1.restaurant-text
   font-size: 5rem
   margin: 0
   padding: 0
-  width: 100%
+  // width: 100%
 
 button.order-btn
   font-family: 'Questrial', sans-serif
@@ -311,11 +311,35 @@ p.footer-text
     text-align: center
 
 
-  .img-text-container,
-  .regular,
+  .regular
+    width: 80%
+    margin-bottom: 30px
   .address
     width: 100%
     margin-bottom: 30px
 
   .nav-menu
     display: none !important
+
+  h1.restaurant-text
+    font-size: 40px
+
+  h1.premium
+    font-size: 40px
+
+  p.quality
+    font-size: 6px
+
+  h1.welcome-text
+    font-size: 20px
+
+  .img-text-container
+    width: 90%
+    margin: auto
+    margin-bottom: 30px
+
+  img.explain-img
+    width: 100%
+
+  .about-container
+    padding: 40px 0
